# Ozymandias

./: .gitignore  CONVENTIONS.md  Cargo.toml  OzyWiki  SPECS.md  TODO.md  chatgippity_tests.js  ontology_diagram_mermaid.md  roadmap.md
.cursor/rules/: git-repo-best-practices.mdc  rust-api.mdc  rust-async.mdc  rust-concurrency.mdc  rust-dependencies.mdc  rust-documentation.mdc  rust-error-handling.mdc  rust-lifetimes.mdc  rust-logging.mdc  rust-macros.mdc  rust-modules.mdc  rust-ownership.mdc  rust-performance.mdc  rust-rules-guidelines.mdc  rust-security.mdc  rust-testing.mdc  rust-traits.mdc  rust-types.mdc  rust-unsafe.mdc
Update `scaffolds/batch2/a/: ontology.rs
ouroboros/: hello.py  pyproject.toml
scaffolds/batch1/a/: parser.rs  storage.rs
scaffolds/batch1/b/: parser.rs  storage.rs
scaffolds/batch2/a/: ontology.rs  transformer.rs
scaffolds/batch2/b/: ontology.rs  transformer.rs
scaffolds/batch3/a/: ml.rs  user.rs
scaffolds/batch3/b/: ml.rs  user.rs
specs/: ARCHITECTURE.md  CLI.md  INIT_COMMAND.md  KNOWLEDGE_MANAGEMENT_ISSUES.md  LOGGING.md
src/: atom.rs  main.rs  types.rs
src/cli/: mod.rs
src/commands/: init.rs  mod.rs
